tests/003_string.pan.out
tests/003_string.pan:13:6-13: error: invalid subtype: {_:ğ•Š | _ = "hello"} <: {v:ğ•Š | v = "goodbye"}
tests/003_string.pan:16:6-13: error: invalid subtype: ğ•Š <: ğŸ™
tests/003_string.pan:19:6-13: error: invalid subtype: ğ•Š <: ğŸ™
tests/003_string.pan:22:6-13: error: invalid subtype: ğ•Š <: ğ”¹
tests/003_string.pan:25:6-13: error: invalid subtype: ğ•Š <: ğ”¹
tests/003_string.pan:28:6-13: error: invalid subtype: ğ•Š <: â„¤
tests/003_string.pan:31:7-14: error: invalid subtype: ğ•Š <: â„¤
f0 : {_:ğ•Š | _ = "hello"}
f1 : ğ•Š
f2 : {v:ğ•Š | v = "hello"}
f3 : {v:ğ•Š | v = "hello"}